# Jumper

./: .gitignore  CMakeLists.txt  main.cpp
Header/: CollisionDetector.h  Entity.h  Game.h  Map.h  Menu.cpp  Menu.h  Platform.h  Player.h
Source/: CollisionDetector.cpp  Game.cpp  Menu.cpp  Platform.cpp  Player.cpp
Test/: CMakeLists.txt  playerTests.cpp
